# nft_market

./: .gitignore  Cargo.toml  package-lock.json  readme.md
abi/: ERC1155.sol  ERC721.sol
abi/artifacts/: MyERC1155.json  MyERC1155_metadata.json  MyERC721.json  MyERC721_metadata.json
src/: config.rs  eth.rs  http.rs  main.rs  types.rs
