[package]
name = "nft_market"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.10"
web3 = "0.15.0"
tokio = { version = "1.8.0", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
tokio-compat-02 = "0.1"
rocket_contrib = "0.4.2"
serde_json = "1.0"
lazy_static = "1.4"
secp256k1 = "0.16"
futures = "0.3"
base64 = "0.13"